--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ui-darkside",
-  "displayName": "Darkside(git)",
+  "name": "ui-gluo",
+  "displayName": "Gluo",
   "theme": "ui",
   "version": "1.0.0",
   "description": "A customizable, dark sidebar theme for Nylas N1",
@@ -8,6 +8,6 @@
   "engines": {
     "nylas": "*"
   },
-  "styleSheets": ["darkside"],
+  "styleSheets": ["gluo"],
   "private": true
 }
